# Fossil-HR-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md
tools/: appmeta_schema.json  appmeta_schema.py  fossil_image.py  utils.py  wapp.py  wapp_file.py  wapp_image.py
